wordpress-0.1.1/templates/wordpress-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minikube-wordpress-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: wordpress-app
  ports:
    - port: 8080
      targetPort: 8080
