wordpress-0.1.1/templates/wordpress-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: 'Prefix'
            backend:
              service:
                name: minikube-wordpress-app-cluster-ip-service
                port:
                  number: 8080
